--- a/src/assets/style/base.css
+++ b/src/assets/style/base.css
@@ -13,3 +13,9 @@ body {
   height: 100%;
   overflow: hidden;
 }
+
+.bg-contain {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
